@@ -2,22 +2,20 @@ package com.sc.java17b.eg01relaxed_strong_encapsulation;
 
 import java.lang.constant.ConstantDescs;
 import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.util.Arrays;
 
 
 /**
  * "Relaxed Strong Encapsulation" has been removed in JDK17
+ * --illegal-access=permit is removed in JDK17
  *
- * This example tries to access String.value using reflection
+ * This example tries to create instance of ConstantDescs using reflection
  * - Which is a private constructor
  * - Is not part of current module
  *
- * This example will not run on JDK17.
+ * In JDK16 it was possible to run it using this command
+ * $ java --illegal-access=permit Eg02AccessPrivateConstructor.java
  *
- * But in JDK16 it can run by opening java.base/java.lang.constant
- *
- *
+ * To run in JDK17 we have to open java.base/java.lang.constant
  * $ java --add-opens java.base/java.lang.constant=ALL-UNNAMED Eg02AccessPrivateConstructor.java
  */
 public class Eg02AccessPrivateConstructor {
